--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-2/int08-2-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-2/int08-2-2.component.html
@@ -1,3 +1,4 @@
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
   <div class="ui grid">
       <div class="sixteen wide column">
           <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
@@ -15,7 +16,7 @@
                         <input type="text" placeholder="ปัจจัยเสี่ยง" maxlength="100" name="riskAssInfHdrName" id="riskAssInfHdrName" [(ngModel)]="riskAssInfHdrName" >
                       </div>
                       <div class="four wide field ">
-                        <button class="ui mini primary button" (click)="addRiskAssInfHdr()" >
+                        <button class="ui mini green button" (click)="addRiskAssInfHdr()" >
                           <i class="add icon"></i>
                           เพิ่ม
                         </button>
@@ -49,6 +50,7 @@
                         กำหนดเงื่อนไขปัจจัยเสี่ยงรวม
                       </button>
                       <button class="ui mini  button" (click)="cancelFlow()">
+                          <i class="remove icon"></i>
                           ยกเลิก
                       </button>
                     </div>
