--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -85,7 +85,7 @@
                             </div>
                         </div>
 
-                    <div class="ui dropdown item " routerLinkActive="active " *ngIf="authService.renderByPage('int05-S1')">
+                    <!-- <div class="ui dropdown item " routerLinkActive="active " *ngIf="authService.renderByPage('int05-S1')">
                         <i class="dropdown icon "></i> ตรวจสอบสินทรัพย์
                         <div class="menu ">
                             <a class="item " [routerLink]="[ '/int05/3'] " *ngIf="authService.renderByPage('int05/3')"
@@ -96,7 +96,7 @@
                                 routerLinkActive="active ">บันทึกข้อมูลสินทรัพย์</a>
 
                         </div>
-                    </div>
+                    </div> -->
                     <div class="ui dropdown item " routerLinkActive="active " >
                         <i class="dropdown icon "></i> ตรวจสอบจัดซื้อจัดจ้าง
                         <div class="menu ">
