Change fix web service

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-1/int01-2-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-1/int01-2-1.component.html
@@ -51,7 +51,7 @@
             <div class="ui calendar" id="calendar1" style="width:100%">
               <div class="ui input left icon">
                 <i class="calendar alter nate outline icon"></i>
-                <input type="text" name="startDate" id="startDate">
+                <input type="text" name="startDate" id="startDate" readonly>
               </div>
             </div>
           </div>
@@ -60,7 +60,7 @@
             <div class="ui calendar" id="calendar2" style="width:100%">
               <div class="ui input left icon">
                 <i class="calendar alter nate outline icon"></i>
-                <input type="text" name="endDate" id="endDate">
+                <input type="text" name="endDate" id="endDate" readonly>
               </div>
             </div>
           </div>
