--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-5/int08-1-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-5/int08-1-5.component.html
@@ -21,11 +21,12 @@
         </div>
         <div class="inline fields">
           <div class="two wide field "></div>
-          <div class="two wide field">
+          <div class="two wide field required">
             <label>ปีงบประมาณ</label>
           </div>
           <div class="four wide field ">
-            <input type="text" placeholder="ปีงบประมาณ" class="custom" name="budgetYear" id="budgetYear" [(ngModel)]="budgetYear" disabled="disabled">
+            <input type="text" placeholder="ปีงบประมาณ" class="custom" name="budgetYear" id="budgetYear" [(ngModel)]="budgetYear"
+              disabled="disabled">
           </div>
           <div class="two wide field ">
             <label>ผู้ตรวจ</label>
@@ -40,11 +41,11 @@
 
   <!-- form 2 -->
   <div class="sixteen wide column ">
-      <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-        <span>รายละเอียดกระดาษทำการ{{riskAssRiskWsHdr.riskHdrName}}</span>
-      </div>
-      <div class="ui attached segment">
-        <div class="ui form">
+    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+      <span>รายละเอียดกระดาษทำการ{{riskAssRiskWsHdr.riskHdrName}}</span>
+    </div>
+    <div class="ui attached segment">
+      <div class="ui form">
 
         <!-- table -->
         <table id="dataTable" class="ui small celled table " style="width: 100%;">
@@ -104,7 +105,7 @@
       <div class="ui form">
         <condition [riskId]="id" [riskType]="'MAIN'" [page]="'int08-1-5'" (out)="closeConditionRL($event)"></condition>
       </div>
-      <br/>
+      <br />
     </div>
   </div>
 
