--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1.component.html
@@ -99,9 +99,9 @@
         <th style="text-align: center !important" rowspan="2">เลขที่ใบ 5 ตอน</th>
         <th style="text-align: center !important" rowspan="2">ลงวันวันที่</th>
         <th style="text-align: center !important" rowspan="2">วันที่ตรวจนับ</th>
-        <th style="text-align: center !important" rowspan="2">วันที่ตรวจนับ</th>
-        <th style="text-align: center !important" rowspan="2">วันที่ตรวจนับ</th>
-        <th style="text-align: center !important" rowspan="2">ผู้ตรวจนับ</th>
+        <th style="text-align: center !important" rowspan="2">ผู้ตรวจนับ (1)</th>
+        <th style="text-align: center !important" rowspan="2">ผู้ตรวจนับ (2)</th>
+        <th style="text-align: center !important" rowspan="2">ผู้ตรวจนับ (3)</th>
         <th style="text-align: center !important" rowspan="2">ชนิดแสตมป์/ขนาดบรรจุ</th>
         <th style="text-align: center !important" rowspan="2">จำนวน (เล่ม)</th>
         <th style="text-align: center !important" rowspan="2">จำนวน (ดวง)</th>
@@ -129,7 +129,7 @@
   <br>
   <div class="ui centered grid">
     <a class="ui mini primary button" routerLink="/int05/1/1/2"><i class="file alternate outline icon"></i>สรุปแสตป์รายปีงบประมาณ</a>
-    <button class="ui mini yellow button"><i class="print icon"></i> ส่งออก</button>
+    <button class="ui mini yellow button" (click)="exportFile()"><i class="print icon"></i> ส่งออก</button>
     <button class="ui mini primary button"><i class="file alternate outline icon"></i>พิมพ์รายงานตัดปีแสตมป์</button>
   </div><br>
 </div>
