--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1-2/int05-1-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1-2/int05-1-1-2.component.html
@@ -9,7 +9,7 @@
         <table id="dataTable" class="ui small celled table nowrap striped selectable" style="width: 100%">
                 <thead>
                         <tr style="text-align: center;">
-                            <th rowspan="2">ลำดับ</th>
+                            <th rowspan="2">ลำดับที่</th>
                             <th rowspan="2">ชนิดแสตมป์</th>
                             <th colspan="2">คงเหลือยกมาจากปีก่อน</th>
                             <th colspan="3">ตุลาคม</th>
