--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1-1/int05-1-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1-1/int05-1-1-1.component.html
@@ -14,7 +14,7 @@
                 <div class="inline fields  ui grid">
                     <div class="one wide field "></div>
                     <div class="three wide field required">
-                        <label>วันที่รับ - จ่าย - ส่งคืน</label>
+                        <label class="text-right full-width">วันที่รับ - จ่าย - ส่งคืน</label>
                     </div>
                     <div class="four wide field ">
                         <div class="ui input">
@@ -28,7 +28,7 @@
                         </div>
                     </div>
                     <div class="three wide field required">
-                        <label>สถานะการ รับ - จ่าย - ส่งคืน</label>
+                        <label class="text-right full-width">สถานะการ รับ - จ่าย - ส่งคืน</label>
                     </div>
                     <div class="four wide field ">
                         <select class="ui search dropdown" [(ngModel)]="formModal.status" name="status" id="status" (change)="changeStatus($event)">
@@ -42,7 +42,7 @@
                 <div class="inline fields  ui grid">
                     <div class="one wide field "></div>
                     <div class="three wide field required">
-                        <label>หน่วยงาน / ผู้ประกอบการ</label>
+                        <label class="text-right full-width">หน่วยงาน / ผู้ประกอบการ</label>
                     </div>
                     <div class="four wide field ">
                         <input [(ngModel)]="formModal.departmentName" id="departmentName" name="departmentName" type="text">
@@ -53,13 +53,13 @@
                 <div class="inline fields  ui grid">
                     <div class="one wide field "></div>
                     <div class="three wide field ">
-                        <label>หนังสือขอเบิกแสตมป์ (หน่วยเบิก)</label>
+                        <label class="text-right full-width">หนังสือขอเบิกแสตมป์ (หน่วยเบิก)</label>
                     </div>
                     <div class="four wide field ">
                         <input [(ngModel)]="formModal.bookNumberWithdrawStamp" name="bookNumberWithdrawStamp" id="bookNumberWithdrawStamp" type="text" [disabled]="statusSendBack" class="statusSendBack">
                     </div>
                     <div class="three wide field ">
-                        <label>ลงวันที่ขอเบิกแสตมป์</label>
+                        <label class="text-right full-width">ลงวันที่ขอเบิกแสตมป์</label>
                     </div>
                     <div class="four wide field ">
                         <div class="ui calendar width100" id="dateWithdrawStampForm">
@@ -76,13 +76,13 @@
                 <div class="inline fields  ui grid">
                     <div class="one wide field "></div>
                     <div class="three wide field ">
-                        <label>หนังสือส่งแสตมป์</label>
+                        <label class="text-right full-width">หนังสือส่งแสตมป์</label>
                     </div>
                     <div class="four wide field ">
                         <input [(ngModel)]="formModal.bookNumberDeliverStamp" name="bookNumberDeliverStamp" id="bookNumberDeliverStamp" type="text">
                     </div>
                     <div class="three wide field ">
-                        <label>ลงวันที่ส่งแสตมป์</label>
+                        <label class="text-right full-width">ลงวันที่ส่งแสตมป์</label>
                     </div>
                     <div class="four wide field ">
                         <div class="ui calendar width100" id="dateDeliverStampForm">
@@ -99,13 +99,13 @@
                 <div class="inline fields  ui grid">
                     <div class="one wide field "></div>
                     <div class="three wide field ">
-                        <label>เลขที่ใบ 5 ตอน</label>
+                        <label class="text-right full-width">เลขที่ใบ 5 ตอน</label>
                     </div>
                     <div class="four wide field ">
                         <input [(ngModel)]="formModal.fivePartNumber" name="fivePartNumber" id="fivePartNumber" type="text">
                     </div>
                     <div class="three wide field ">
-                        <label>ลงวันที่</label>
+                        <label class="text-right full-width">ลงวันที่</label>
                     </div>
                     <div class="four wide field ">
                         <div class="ui calendar width100" id="fivePartDateForm">
@@ -121,14 +121,14 @@
                 <!-- row 6 -->
                 <div class="inline fields  ui grid">
                     <div class="one wide field "></div>
-                    <div class="three wide field required ">
-                        <label>ผู้ตรวจนับและรับแสตมป์</label>
+                    <div class="three wide field ">
+                        <label class="text-right full-width">ผู้ตรวจนับและรับแสตมป์</label>
                     </div>
                     <div class="four wide field ">
                         <input [(ngModel)]="formModal.stampChecker" name="stampChecker" id="stampChecker" type="text" [disabled]="statusPay" class="statusPay">
                     </div>
                     <div class="three wide field ">
-                        <label>วันที่ตรวจนับ</label>
+                        <label class="text-right full-width">วันที่ตรวจนับ</label>
                     </div>
                     <div class="four wide field ">
                         <div class="ui calendar width100" id="stampCheckDateForm">
@@ -144,8 +144,8 @@
                 <!-- row 6  (2)-->
                 <div class="inline fields  ui grid">
                     <div class="one wide field "></div>
-                    <div class="three wide field required">
-                        <label>ผู้ตรวจนับและรับแสตมป์</label>
+                    <div class="three wide field">
+                        <label class="text-right full-width">ผู้ตรวจนับและรับแสตมป์</label>
                     </div>
                     <div class="four wide field ">
                         <input [(ngModel)]="formModal.stampChecker2" name="stampChecker2" id="stampChecker2" type="text" [disabled]="statusPay" class="statusPay">
@@ -155,8 +155,8 @@
                 <!-- row 6  (3)-->
                 <div class="inline fields  ui grid">
                     <div class="one wide field "></div>
-                    <div class="three wide field required ">
-                        <label>ผู้ตรวจนับและรับแสตมป์</label>
+                    <div class="three wide field ">
+                        <label class="text-right full-width">ผู้ตรวจนับและรับแสตมป์</label>
                     </div>
                     <div class="four wide field ">
                         <input [(ngModel)]="formModal.stampChecker3" name="stampChecker3" id="stampChecker3" type="text" [disabled]="statusPay" class="statusPay">
@@ -167,7 +167,7 @@
                 <div class="inline fields  ui grid ">
                     <div class="one wide field "></div>
                     <div class="three wide field required">
-                        <label>ประเภทแสตมป์</label>
+                        <label class="text-right full-width">ประเภทแสตมป์</label>
                     </div>
                     <div class="four wide field ">
                         <select class="ui search dropdown" [(ngModel)]="formModal.stampType" name="stampType" id="stampType" (change)="stampGenreList($event)">
@@ -176,7 +176,7 @@
                         </select>                        
                     </div>
                     <div class="three wide field required">
-                        <label>ชนิดแสตมป์</label>
+                        <label class="text-right full-width">ชนิดแสตมป์</label>
                     </div>
                     <div class="four wide field ">
                         <select class="ui search dropdown" [(ngModel)]="formModal.stampBrand" name="stampBrand" id="stampBrand">
@@ -190,16 +190,16 @@
                 <div class="inline fields  ui grid">
                     <div class="one wide field "></div>
                     <div class="three wide field ">
-                        <label>จำนวน (เล่ม)</label>
+                        <label class="text-right full-width">จำนวน (เล่ม)</label>
                     </div>
                     <div class="four wide field ">
-                        <input [(ngModel)]="formModal.numberOfBook" name="numberOfBook" id="numberOfBook" type="text">
+                        <input [(ngModel)]="formModal.numberOfBook" name="numberOfBook" id="numberOfBook" type="number">
                     </div>
                     <div class="three wide field ">
-                        <label>จำนวน (ดวง)</label>
+                        <label class="text-right full-width">จำนวน (ดวง)</label>
                     </div>
                     <div class="four wide field required">
-                        <input [(ngModel)]="formModal.numberOfStamp" name="numberOfStamp" id="numberOfStamp" type="text">
+                        <input [(ngModel)]="formModal.numberOfStamp" name="numberOfStamp" id="numberOfStamp" type="number">
                     </div>
                     <div class="one wide field "></div>
                 </div>
@@ -207,10 +207,10 @@
                 <div class="inline fields  ui grid">
                     <div class="one wide field "></div>
                     <div class="three wide field required">
-                        <label>มูลค่าพิมพ์ (บาท/ดวง)</label>
+                        <label class="text-right full-width">มูลค่าพิมพ์ (บาท/ดวง)</label>
                     </div>
                     <div class="four wide field ">
-                        <input [(ngModel)]="formModal.valueOfStampPrinted" name="valueOfStampPrinted" id="valueOfStampPrinted" type="text">
+                        <input [(ngModel)]="formModal.valueOfStampPrinted" name="valueOfStampPrinted" id="valueOfStampPrinted" type="number">
                     </div>
                     <div class="eight wide field "></div>
                 </div>
@@ -218,10 +218,10 @@
                 <div class="inline fields  ui grid">
                     <div class="one wide field "></div>
                     <div class="three wide field ">
-                        <label>ค่าภาษี (บาท)</label>
+                        <label class="text-right full-width">ค่าภาษี (บาท)</label>
                     </div>
                     <div class="four wide field ">
-                        <input [(ngModel)]="formModal.taxStamp" name="taxStamp" id="taxStamp" type="text" [disabled]="statusReceive"  class="statusReceive">
+                        <input [(ngModel)]="formModal.taxStamp" name="taxStamp" id="taxStamp" type="number" [disabled]="statusReceive"  class="statusReceive">
                     </div>
                     <div class="eight wide field"></div>
                 </div>
@@ -229,13 +229,13 @@
                 <div class="inline fields  ui grid">
                     <div class="one wide field "></div>
                     <div class="three wide field ">
-                        <label>รหัสแสตมป์(เริ่ม)</label>
+                        <label class="text-right full-width">รหัสแสตมป์ (เริ่ม)</label>
                     </div>
                     <div class="four wide field ">
                         <input [(ngModel)]="formModal.stampCodeStart" name="stampCodeStart" id="stampCodeStart" type="text">
                     </div>
                     <div class="three wide field ">
-                        <label>รหัสแสตมป์(ถึง)</label>
+                        <label class="text-right full-width">รหัสแสตมป์ (ถึง)</label>
                     </div>
                     <div class="four wide field ">
                         <input [(ngModel)]="formModal.stampCodeEnd" name="stampCodeEnd" id="stampCodeEnd" type="text">
@@ -246,7 +246,7 @@
                 <div class="inline fields  ui grid" *ngFor="let item of listButton" id="{{item}}">                    
                     <div class="one wide field "></div>
                     <div class="three wide field ">
-                        <label>แนบไฟล์</label>
+                        <label class="text-right full-width">แนบไฟล์</label>
                     </div>
                     <div class="four wide field ">
                         <input name="fileName{{item}}" id="fileName{{item}}" type="file"  accept="*" [disabled]="statusSendBackFile" class="statusSendBackFile">                        
@@ -264,7 +264,7 @@
                 <div class="inline fields  ui grid">
                     <div class="one wide field "></div>
                     <div class="three wide field ">
-                        <label>หมายเหตุ</label>
+                        <label class="text-right full-width">หมายเหตุ</label>
                     </div>
                     <div class="eleven wide field ">
                         <textarea [(ngModel)]="formModal.note" name="note" id="note" rows="4"></textarea>
@@ -286,7 +286,7 @@
     <table id="dataTable" class="ui small celled table nowrap striped selectable" style="width: 100%">
       <thead>
         <tr style="text-align: center;">        
-          <th rowspan="2">ลำดับ</th>
+          <th rowspan="2">ลำดับที่</th>
           <th rowspan="2">วันที่ รับ - จ่าย - ส่งคืน</th>
           <th rowspan="2">สถานะ การรับ - จ่าย - ส่งคืน</th>
           <th rowspan="2">หน่วยงาน/ผู้ประกอบการที่รับ-จ่ายแสตมป์</th>
@@ -295,9 +295,9 @@
           <th rowspan="2">เลขที่ใบ 5 ตอน</th>
           <th rowspan="2">วันที่ใบ 5 ตอน</th>
           <th rowspan="2">วันที่ตรวจนับ</th>
-          <th rowspan="2">ผู้ตรวจนับ</th>
-          <th rowspan="2">ผู้ตรวจนับ</th>
-          <th rowspan="2">ผู้ตรวจนับ</th>
+          <th rowspan="2">ผู้ตรวจนับ (1)</th>
+          <th rowspan="2">ผู้ตรวจนับ (2)</th>
+          <th rowspan="2">ผู้ตรวจนับ (3)</th>
           <th rowspan="2">ชนิดแสตมป์/ขนาดบรรจุ</th>
           <th rowspan="2">จำนวน (เล่ม)</th>
           <th rowspan="2">จำนวน (ดวง)</th>
@@ -315,20 +315,19 @@
           <th>เลขที่หนังสือ</th>
           <th>ลงวันที่</th>
 
-          <th>รหัสแสตมป์(เริ่ม)</th>
-          <th>รหัสแสตมป์(ถึง)</th>
+          <th>รหัสแสตมป์ (เริ่ม)</th>
+          <th>รหัสแสตมป์ (ถึง)</th>
         </tr>
       </thead>
     </table><br>
     <div class="ui centered grid">
         <button class="ui mini blue button" type="button" (click)="onSave()"><i class="save icon"></i>บันทึก</button>
-        <button class="ui mini button" type="button" (click)="backConfirm()"><i class="close icon"></i>กลับ</button>
+        <button class="ui mini button" type="button" (click)="backConfirm()"><i class="close icon"></i>ยกเลิก</button>
     </div><br>
   </div>
 
   <!-- modal success -->
   <div class="ui tiny modal" id="success">
-    <i class="close icon"></i>
     <div class="header">
       แจ้งเตือน
     </div>
@@ -337,7 +336,7 @@
     </div>
     <div class="actions">
       <div class="ui inverted green deny button">
-        ปิด
+        ตกลง
       </div>
     </div>
   </div>
