--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1.component.html
@@ -32,7 +32,7 @@
     <!-- row 2 -->
     <div class="inline fields  ui grid">
       <div class="three wide field ">
-        <label class="text-right full-width">สรรพสามิตพื้นที่สาขา</label>
+        <label class="text-right full-width">สำนักงานสรรพสามิตพื้นที่สาขา</label>
       </div>
       <div class="four wide field ">
         <select name="branch" id="branch" class="ui dropdown ai search full-width">
@@ -90,7 +90,7 @@
   <table id="dataTable" class="ui small celled table nowrap striped selectable" style="width: 100%">
     <thead>
       <tr>
-        <th style="text-align: center !important" rowspan="2">ลำดับ</th>
+        <th style="text-align: center !important" rowspan="2">ลำดับที่</th>
         <th style="text-align: center !important" rowspan="2">วันที่ การรับ-จ่าย-ส่งคืน</th>
         <th style="text-align: center !important" rowspan="2">สถานะ การรับ-จ่าย</th>
         <th style="text-align: center !important" rowspan="2">หน่วยงาน/ผู้ประกอบการที่รับ-จ่ายแสตมป์</th>
@@ -120,8 +120,8 @@
         <th style="text-align: center !important" >เลขที่หนังสือ</th>
         <th style="text-align: center !important" >ลงวันที่</th>
 
-        <th style="text-align: center !important" >รหัสแสตมป์(เริ่ม)</th>
-        <th style="text-align: center !important" >รหัสแสตมป์(ถึง)</th>
+        <th style="text-align: center !important" >รหัสแสตมป์ (เริ่ม)</th>
+        <th style="text-align: center !important" >รหัสแสตมป์ (ถึง)</th>
       </tr>
     </thead>
   </table>
@@ -130,13 +130,13 @@
   <div class="ui centered grid">
     <a class="ui mini primary button" routerLink="/int05/1/1/2"><i class="file alternate outline icon"></i>สรุปแสตป์รายปีงบประมาณ</a>
     <button class="ui mini yellow button" (click)="exportFile()"><i class="print icon"></i> ส่งออก</button>
-    <button class="ui mini primary button"><i class="file alternate outline icon"></i>พิมพ์รายงานตัดปีแสตมป์</button>
+    <!-- <button class="ui mini primary button"><i class="file alternate outline icon"></i>พิมพ์รายงานตัดปีแสตมป์</button> -->
   </div><br>
 </div>
 
 <!-- modal edit-->
 <div class="ui modal" id="modal-edit">
-  <i class="close icon"></i>
+  <!-- <i class="close icon"></i> -->
   <div class="header">
     แก้ไขข้อมูลแสตมป์
   </div>
@@ -148,7 +148,7 @@
       <div class="inline fields  ui grid">
         <div class="one wide field "></div>
         <div class="three wide field ">
-          <label>วันที่รับ - จ่าย</label>
+          <label>วันที่รับ - จ่าย - ส่งคืน</label>
         </div>
         <div class="four wide field ">
           <div class="ui calendar width100" id="dateOfPayForm">
@@ -160,13 +160,14 @@
           </div>
         </div>
         <div class="three wide field ">
-          <label>สถานะการ รับ - จ่าย</label>
+          <label>สถานะการ รับ - จ่าย - ส่งคืน</label>
         </div>
         <div class="four wide field ">
           <select class="ui search dropdown" [(ngModel)]="formModal.status" name="status" id="status">
             <option value="">กรุณาเลือก</option>
-            <option value="รับ">รับ </option>
-            <option value="จ่าย">จ่าย </option>
+            <!-- <option value="รับ">รับ </option>
+            <option value="จ่าย">จ่าย </option> -->
+            <option *ngFor="let item of statusList" value="{{item.typeDescription}}">{{item.typeDescription}} </option>
           </select>
         </div>
         <div class="one wide field "></div>
@@ -186,7 +187,7 @@
       <div class="inline fields  ui grid">
         <div class="one wide field "></div>
         <div class="three wide field ">
-          <label>หนังสือขอเบิกแสตมป์</label>
+          <label>หนังสือขอเบิกแสตมป์ (หน่วยเบิก)</label>
         </div>
         <div class="four wide field ">
           <input [(ngModel)]="formModal.bookNumberWithdrawStamp" name="bookNumberWithdrawStamp" id="bookNumberWithdrawStamp" type="text">
@@ -256,7 +257,7 @@
       <div class="inline fields  ui grid">
         <div class="one wide field "></div>
         <div class="three wide field ">
-          <label>ผู้ตรวจนับ</label>
+          <label>ผู้ตรวจนับและรับแสตมป์</label>
         </div>
         <div class="four wide field ">
           <input [(ngModel)]="formModal.stampChecker" name="stampChecker" id="stampChecker" type="text">
@@ -279,7 +280,7 @@
       <div class="inline fields  ui grid">
         <div class="one wide field "></div>
         <div class="three wide field ">
-          <label>ผู้ตรวจนับ</label>
+          <label>ผู้ตรวจนับและรับแสตมป์</label>
         </div>
         <div class="four wide field ">
           <input [(ngModel)]="formModal.stampChecker2" name="stampChecker2" id="stampChecker2" type="text">
@@ -290,7 +291,7 @@
        <div class="inline fields  ui grid">
         <div class="one wide field "></div>
         <div class="three wide field ">
-          <label>ผู้ตรวจนับ</label>
+          <label>ผู้ตรวจนับและรับแสตมป์</label>
         </div>
         <div class="four wide field ">
           <input [(ngModel)]="formModal.stampChecker3" name="stampChecker3" id="stampChecker3" type="text">
@@ -321,13 +322,13 @@
           <label>จำนวน (เล่ม)</label>
         </div>
         <div class="four wide field ">
-          <input [(ngModel)]="formModal.numberOfBook" name="numberOfBook" id="numberOfBook" type="text">
+          <input [(ngModel)]="formModal.numberOfBook" name="numberOfBook" id="numberOfBook" type="number">
         </div>
         <div class="three wide field ">
           <label>จำนวน (ดวง)</label>
         </div>
         <div class="four wide field ">
-          <input [(ngModel)]="formModal.numberOfStamp" name="numberOfStamp" id="numberOfStamp" type="text">
+          <input [(ngModel)]="formModal.numberOfStamp" name="numberOfStamp" id="numberOfStamp" type="number">
         </div>
         <div class="one wide field "></div>
       </div>
@@ -338,14 +339,14 @@
           <label>มูลค่าพิมพ์ (บาท/ดวง)</label>
         </div>
         <div class="four wide field ">
-          <input [(ngModel)]="formModal.valueOfStampPrinted" name="valueOfStampPrinted" id="valueOfStampPrinted" type="text">
+          <input [(ngModel)]="formModal.valueOfStampPrinted" name="valueOfStampPrinted" id="valueOfStampPrinted" type="number">
         </div>
-        <div class="three wide field ">
+        <!-- <div class="three wide field ">
           <label>เลขที่ประจำเล่ม</label>
         </div>
         <div class="four wide field ">
           <input [(ngModel)]="formModal.serialNumber" name="serialNumber" id="serialNumber" type="text">
-        </div>
+        </div> -->
         <div class="one wide field "></div>
       </div>
       <!-- row 10 -->
@@ -355,7 +356,7 @@
           <label>ค่าภาษี (บาท)</label>
         </div>
         <div class="four wide field ">
-          <input [(ngModel)]="formModal.taxStamp" name="taxStamp" id="taxStamp" type="text">
+          <input [(ngModel)]="formModal.taxStamp" name="taxStamp" id="taxStamp" type="number">
         </div>
         <div class="eight wide field"></div>
       </div>
@@ -363,13 +364,13 @@
       <div class="inline fields  ui grid">
         <div class="one wide field "></div>
         <div class="three wide field ">
-          <label>รหัสแสตมป์(เริ่ม)</label>
+          <label>รหัสแสตมป์ (เริ่ม)</label>
         </div>
         <div class="four wide field ">
           <input [(ngModel)]="formModal.stampCodeStart" name="stampCodeStart" id="stampCodeStart" type="text">
         </div>
         <div class="three wide field ">
-          <label>รหัสแสตมป์(เริ่ม)</label>
+          <label>รหัสแสตมป์ (เริ่ม)</label>
         </div>
         <div class="four wide field ">
           <input [(ngModel)]="formModal.stampCodeEnd" name="stampCodeEnd" id="stampCodeEnd" type="text">
@@ -402,7 +403,8 @@
     <!-- form -->
     <div class="actions"><br>
       <div class="ui center aligned grid">
-        <button class="ui blue button" type="button" (click)="modalEditSubmit()">บันทึก</button>
+        <button class="ui mini blue button" type="button" (click)="modalEditSubmit()"><i class="save icon"></i>บันทึก</button>
+        <button class="ui mini deny button" type="button"><i class="close icon"></i>ยกเลิก</button>
       </div>
     </div>
   </div>
