--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-2/int02-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-2/int02-2.component.html
@@ -23,7 +23,7 @@
           <div class="field">
             <label></label>
             <div class="ui input" style="margin-top: 1.25em;">
-              <button type="submit" style="margin-left: auto;" class="ui mini primary button {{ notNullDepartment() ? 'disabled' : '' }}">
+              <button type="submit" style="margin-left: auto;" class="ui mini green button {{ notNullDepartment() ? 'disabled' : '' }}">
                 <i class="add icon"></i>
                 เพิ่ม
               </button>
